# backend/docs/swagger.yaml
@@ -1326,6 +1326,55 @@ paths:
       summary: 更新接口
       tags:
       - API
+  /admin/apis/{id}/roles:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 接口ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/backend_api_v1.ApiRoleResponse'
+      security:
+      - Bearer: []
+      summary: 获取接口授权的角色列表
+      tags:
+      - Api
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: 接口ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 角色ID列表
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/backend_api_v1.UpdateApiRolesRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/backend_api_v1.Response'
+      security:
+      - Bearer: []
+      summary: 更新接口授权的角色
+      tags:
+      - Api
   /admin/menus:
     get:
       consumes:
@@ -1554,6 +1603,55 @@ paths:
       security:
       - Bearer: []
       summary: 更新角色
+      tags:
+      - Role
+  /admin/roles/{id}/apis:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 角色ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/backend_api_v1.RoleApiResponse'
+      security:
+      - Bearer: []
+      summary: 获取角色授权的接口列表
+      tags:
+      - Role
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: 角色ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 接口ID列表
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/backend_api_v1.UpdateRoleApisRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/backend_api_v1.Response'
+      security:
+      - Bearer: []
+      summary: 更新角色授权的接口
       tags:
       - Role
   /admin/roles/permissions:
@@ -1895,57 +1993,6 @@ paths:
       summary: 更新用户状态
       tags:
       - User
-  /apis/{id}/roles:
-    get:
-      consumes:
-      - application/json
-      operationId: GetApiRoles
-      parameters:
-      - description: 接口ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/backend_api_v1.ApiRoleResponse'
-      security:
-      - Bearer: []
-      summary: 获取接口授权的角色列表
-      tags:
-      - Api
-    put:
-      consumes:
-      - application/json
-      operationId: UpdateApiRoles
-      parameters:
-      - description: 接口ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 角色ID列表
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/backend_api_v1.UpdateApiRolesRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/backend_api_v1.Response'
-      security:
-      - Bearer: []
-      summary: 更新接口授权的角色
-      tags:
-      - Api
   /auth/oidc:
     post:
       consumes:
@@ -2243,57 +2290,6 @@ paths:
       summary: 重置密码
       tags:
       - Auth
-  /roles/{id}/apis:
-    get:
-      consumes:
-      - application/json
-      operationId: GetRoleApis
-      parameters:
-      - description: 角色ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/backend_api_v1.RoleApiResponse'
-      security:
-      - Bearer: []
-      summary: 获取角色授权的接口列表
-      tags:
-      - Role
-    put:
-      consumes:
-      - application/json
-      operationId: UpdateRoleApis
-      parameters:
-      - description: 角色ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 接口ID列表
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/backend_api_v1.UpdateRoleApisRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/backend_api_v1.Response'
-      security:
-      - Bearer: []
-      summary: 更新角色授权的接口
-      tags:
-      - Role
   /settings:
     get:
       consumes:
